<resources>
    <string name="app_name">Trip Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="register"> New User ?</string>
    <string name="loginGoogle">Login with Google</string>
    <string name="hintEmail">Email...</string>
    <string name="hintPassword">Password...</string>
    <string name="registerEmail">Enter your Email</string>
    <string name="registerPassword">Enter your Password</string>
    <string name="registerName">Enter your Name</string>
    <string name="registerButton">Register</string>

    <string name="tripnamw">Trip Name</string>
    <string name="startPoint">Start Location Trip</string>
    <string name="newTrip">"Add"</string>
    <string name="addTrip">Add New Trip</string>
    <string name="endPoint">End Location Trip</string>
    <string name="selectTime">Select Time</string>
    <string name="selectDate">Select Date</string>
    <string name="save">Save</string>

    <string name="Start">Start</string>
    <string name="deleted">Delete</string>
    <string name="add">Add</string>
    <string name="addNotes">Add Notes</string>
    <string name="invalidName">Please Enter Vaild Trip Name</string>
    <string name="invalidAddress">Please Choose Address</string>
    <string name="invalidTime">Please Choose Time</string>
    <string name="invalidDate">Please Choose Date</string>

    <string name="Edit">Edit</string>
    <string name="Note">Note</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="key_map">AIzaSyB1zC4G9w1DJInRAZCU0e5meRq6UCWeFDU</string>
    <string name="parth_trip">Show Path Trip</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>