<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edittextRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/registerName"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittextRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/registerEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edittextRegisterName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edittextRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/edittextRegisterName" />

    <EditText
        android:id="@+id/edittextRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/registerPassword"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edittextRegisterEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edittextRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/edittextRegisterEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittext"
        android:text="@string/registerButton"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/edittextRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/edittextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/edittextRegisterPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>