<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upcoming.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="199dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittextLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edittextLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edittextLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/edittextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/edittextLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext"
        android:text="@string/login"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/edittextLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/edittextLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/edittextLoginPassword" />

    <TextView
        android:id="@+id/textviewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textColor="@color/purple_500"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogleLogin"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/btnGoogleLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="242dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>